--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+#title {
+  color: lavender;
+  background-color: purple;
+  font-family: sans-serif;
+  font-size: 50px;
+  text-transform: uppercase;
+  box-sizing: border-box;
+  text-align: end;
+  padding: 50px;
+  margin-bottom: 100px;
+  margin-top: 0;
+}
